--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>web gallery</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,18 +15,19 @@
             <img src="images/logo.png" class="logo">
             <button type="button">Sign-up</button>
         </div>
+
         <div class="content">
             <h4>Welcome to Our </h4>
             <h1>Amazing <br> Creative Platform</h1>
             <p>Join us to explore a world of opportunities and connect with like-minded individuals.</p>
-            <button type="button" onclick="openProjects()">Take a tour</button>
-
-           
+            <button type="button" onclick="openProjects()">Take a tour</button>     
         </div>
-        <div class="side-bar">
-            <img src="images/menu.png" class="menu">
 
-            <div class="social-links">
+        <!-- Side Navigation -->
+ <img src="images/menu.png" class="menu" onclick="openNav()">
+     <div id="sideNav" class="side-nav">
+    <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">×</a>
+    <div class="social-links">
                 <img src="images/fb.png">
                 <img src="images/tw.png">
                 <img src="images/ig.png">
@@ -36,10 +37,11 @@
                 <img src="images/share.png">
                 <img src="images/info.png">
                
+</div>
+
+
         </div>
-
-
-    </div>
+  
     <div class="bubble">
     <img src="images/bubble.png" >
     <img src="images/bubble.png" >
@@ -49,7 +51,7 @@
     <img src="images/bubble.png" >
     <img src="images/bubble.png" >
 </div>
- </div>
+ 
  <!-- Project Popup Modal -->
 <div id="projectModal" class="modal">
     <div class="modal-content">
@@ -58,30 +60,27 @@
         <h2>My Projects</h2>
 
         <div class="projects-grid">
-            <div class="project-card">Project 1</div>
-            <div class="project-card">Project 2</div>
-            <div class="project-card">Project 3</div>
-            <div class="project-card">Project 4</div>
+            <div class="project-card">
+                <a href="./projects/3d-portfolio/index.html">3d-portfolio</a>
+            </div>
+            <div class="project-card">
+                <a href="./projects/3d--Image-slider/index.html">3d--Image-slider</a>
+            </div>
+            <div class="project-card">
+                <a href="./projects/fanta/">Fanta</a>
+            </div>
+            <div class="project-card">
+                <a href="./projects/Login-page/login.html">Interactive Login page</a>
+            </div>
+            <div class="project-card">
+                <a href="./projects/calculator/index.html">calculator</a>
+            </div>
+            <div class="project-card">
+                <a href="./projects/weather app/weather-app/index.html"> weather-app</a>
         </div>
     </div>
 </div>
-<script>
-function openProjects() {
-    document.getElementById("projectModal").style.display = "flex";
-}
-
-function closeProjects() {
-    document.getElementById("projectModal").style.display = "none";
-}
-
-// Close when clicking outside the box
-window.onclick = function(event) {
-    let modal = document.getElementById("projectModal");
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
-</script>
-
+</div>
+<script src="script.js"></script>
 </body>
 </html>
