--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <a href="./projects/3d--Image-slider/index.html">3d--Image-slider</a>
             </div>
             <div class="project-card">
-                <a href="./projects/fanta/">Fanta</a>
+                <a href="./projects/Fanta/index.html">Fanta</a>
             </div>
             <div class="project-card">
                 <a href="./projects/Login-page/login.html">Interactive Login page</a>
